# thats-the-badger

./: .gitignore  CMakeLists.txt  README.md
thats-the-badger/: CMakeLists.txt  badge.hpp  contact.hpp  main.cpp  sdc4x.cpp  sdc4x.hpp  state.cpp  state.hpp
